--- a/Views/Computer/Update.cshtml
+++ b/Views/Computer/Update.cshtml
@@ -3,7 +3,7 @@
 <div>
     <h1>Criar computador</h1>
     <form asp-action="Update">
-        <input asp-for="@Model.Id" type="hidden" class="form-control">
+        <input asp-for="@Model.ID" type="hidden" class="form-control">
         <label asp-for="@Model.Ram" class="form-label">
             RAM
         </label>
